--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/202402630989/Downloads/sqlite-jdbc-3.49.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/202402630989/Downloads/sqlite-jdbc-3.49.1.0 (2).jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
